--- a/Client/flipkart/package.json
+++ b/Client/flipkart/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.1",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "react": "^18.3.1",
